hermes_fuzz_executed_few_shot_v2/fuzz_4_execution
'use strict';

let num = 5,
    result = num + 64;
result = 1 + null;
result = result + 64;
console.log(num);  
console.log(result);  
```


Execution Output ------------------:
test.js:10:1: error: non-terminated template literal

^
test.js:9:3: note: template literal started here
```
  ^
test.js:10:1: error: invalid expression

^
